Fix layout issue with hotel widget.

--- a/views/travel/travel.css
+++ b/views/travel/travel.css
@@ -116,6 +116,9 @@
     max-width: 100%;
     max-height: 100%;
 }
+.hotel-widget-view .caousel-wrapper>div {
+    max-height: 100%;
+}
 .hotel-widget-view iframe {
     width: 100%;
     height: 100%;
@@ -132,7 +135,7 @@
         display: flex;
     }
     .hotel-widget-view-wrapper {
-        height: 400px;
+        min-height: 500px;
     }
     .hotel-widget-view {
         min-height:
@@ -172,6 +175,9 @@
     }
     .hotel-widget-view-wrapper {
         display: flex;
+    }
+    .hotel-widget-view .caousel-wrapper {
+        min-width: 200px;
     }
 }
 
